// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleKicker should display a default Kicker 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "marginBottom": 3,
        "paddingBottom": 18,
        "width": "100%",
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#999999",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GTGuardianTitlepiece-Bold",
          "fontSize": 18,
          "lineHeight": 21,
          "marginTop": 2,
        },
        Array [
          Object {
            "color": "#121212",
          },
        ],
        Object {
          "color": "#121212",
        },
      ]
    }
  >
    Sport
  </Text>
</View>
`;

exports[`ArticleKicker should display a long read style kicker 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "marginBottom": 3,
        "paddingBottom": 18,
        "width": "100%",
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#999999",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GTGuardianTitlepiece-Bold",
          "fontSize": 18,
          "lineHeight": 21,
          "marginTop": 2,
        },
        Array [
          Object {
            "color": "#121212",
          },
        ],
        Object {
          "color": "#121212",
        },
      ]
    }
  >
    Sport
  </Text>
</View>
`;

exports[`ArticleKicker should return null if the kicker is "Opinion" 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0.5,
        "marginBottom": 3,
        "paddingBottom": 18,
        "width": "100%",
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#999999",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "flexShrink": 0,
          "fontFamily": "GTGuardianTitlepiece-Bold",
          "fontSize": 18,
          "lineHeight": 21,
          "marginTop": 2,
        },
        Array [
          Object {
            "color": "#121212",
          },
        ],
        Object {
          "color": "#121212",
        },
      ]
    }
  >
    Opinion
  </Text>
</View>
`;
